fix overflow

--- a/style.css
+++ b/style.css
@@ -4,56 +4,9 @@ html {
     line-height: 1.3;
     font-family: "Montserrat", serif;
     box-sizing: border-box;
-    background-color: #000;
-    color: powderblue;
-}
-
-
-h1 {
-
-    font-size: 1.8rem;
-    ;
-}
-
-
-h2 {
-
-    font-size: 1.5rem;
-}
-
-h3 {
-
-    font-size: 1rem;
-}
-
-table th {
-
-    background-color: #9CA986;
-    color: #333;
-}
-
-tr {
-
-    background-color: #304D30;
 
 }
 
-.project-section h2 {
-
-    margin-bottom: 3rem;
-}
-
-
-.contact-me h2 {
-
-    margin-bottom: 0;
-}
-
-.skills,
-#education {
-
-    text-align: left;
-}
 
 
 nav {
@@ -67,7 +20,6 @@ nav {
 nav a {
 
     text-decoration: none;
-    color: aliceblue;
 }
 
 nav a:hover {
@@ -165,8 +117,7 @@ nav a:hover {
 
         text-align: center;
         padding: 2rem;
-        /* margin-left: 1rem; */
-        width: 26rem;
+        width: 100%;
         margin: 0 auto;
     }
 
@@ -291,12 +242,11 @@ nav a:hover {
         background-color: #f4f4f4;
     }
 
-
     form {
 
         text-align: center;
         padding: 2rem;
-        width: 26rem;
+        width: 100%;
         margin: 0 auto;
     }
 
@@ -442,14 +392,11 @@ nav a:hover {
     }
 
 
-
-
     form {
 
         text-align: center;
         padding: 2rem;
-        /* margin-left: 1rem; */
-        width: 40rem;
+        width: 90%;
         margin: 0 auto;
     }
 
@@ -462,7 +409,7 @@ nav a:hover {
     textarea {
 
         margin-bottom: 1rem;
-        width: 90%;
+        width: 100%;
     }
 
 
@@ -589,15 +536,14 @@ nav a:hover {
     }
 
 
-
     form {
 
         text-align: center;
         padding: 2rem;
-        /* margin-left: 1rem; */
-        width: 40rem;
+        width: 100%;
         margin: 0 auto;
     }
+
 
     .contact-me h2 span {
 
